--- a/css/style.css
+++ b/css/style.css
@@ -16,71 +16,21 @@ Design System
 ***************
 */
 
+/* Color */
+
+:root {
+    --bg-header: #315EE9;
+    --main-color: #7289DA;
+    --snd-color: #ffffff;
+    --trd-color: #23272A;
+}
+
+/* Typography */
+
 body {
-    font-family: Roboto, sans-serif, sans-serif;
+    font-family: Whitney, 'Helvetica Neue', Helvetica, Arial, sans-serif;
+    font-size: 16px;
     font-weight: 400;
-    font-size: 14px;
-}
-
-section {
-    padding: 34px 0px;
-}
-
-.top-header {
-    width: 1000px;
-    margin: 0 auto;
-}
-
-.container {
-    width: 1000px;
-    margin: 0 auto;
-    display: flex;
-    padding: 120px 24px;
-}
-
-.container-fullwidth {
-    width: 1000px;
-    margin: 0 auto;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    text-align: center;
-    padding: 120px 24px;
-}
-
-button {
-    background-color: #ffffff;
-    padding: 12px 18px;
-    border: none;
-    border-radius: 24px;
-    font-size: 18px;
-}
-
-button.alt {
-    background-color: #23272A;
-    color: #ffffff;
-    padding: 12px 18px;
-    border: none;
-    border-radius: 24px;
-    font-size: 18px;
-}
-
-.login button {
-    padding: 10px 14px;
-    color: #404EED;
-    font-size: 14px;
-}
-
-footer button {
-    background-color: #7289DA;
-    padding: 10px 14px;
-    color: #ffffff;
-    font-size: 14px;
-}
-
-.cta button {
-    background-color: #7289DA;
-    color: #ffffff;
 }
 
 h1 {
@@ -105,7 +55,15 @@ h4 {
 }
 
 h5 {
-    color: #7289DA;
+    color: var(--main-color);
+    font-size: 30px;
+    font-weight: 600;
+    line-height: 36px;
+    margin-bottom: 10px;
+}
+
+h6 {
+    color: var(--main-color);
     font-size: 30px;
     font-weight: 600;
     line-height: 36px;
@@ -119,44 +77,80 @@ p {
     margin-bottom: 20px;
 }
 
+/* Button */
+
+button {
+    background-color: var(--snd-color);
+    padding: 12px 20px;
+    border: none;
+    border-radius: 24px;
+    font-size: 18px;
+
+}
+
+.button--alt {
+    background-color: var(--trd-color);
+    color: var(--snd-color);
+}
+
+.button--small {
+    color: var(--trd-color);
+    padding: 10px 14px;
+    font-size: 14px;
+}
+
+footer button {
+    background-color: #7289DA;
+    padding: 10px 14px;
+    color: #ffffff;
+    font-size: 14px;
+}
+
+.cta button {
+    background-color: #7289DA;
+    color: #ffffff;
+}
+
 /* 
 ---------------
 Header
 ---------------
 */
 
+/* Header top */
+
 header {
     padding-top: 20px;
-    color: #ffffff;
-    background-color: #315EE9;
+    background-color: var(--bg-header);
+    color: var(--snd-color);
 }
 
-.top-header {
+.header__top {
     display: flex;
     align-items: center;
 }
 
-.brand {
+.header__top__brand {
     width: 20%;
 }
 
-.brand img {
+.header__top__brand img {
     width: 100px;
 }
 
-nav {
+.header__top nav {
     width: 60%;
     justify-content: center;
 }
 
-.menu {
+.header__top__nav__menu {
     list-style: none;
     display: flex;
     justify-content: center;
     gap: 30px;
 }
 
-.login {
+.header__top__login {
     width: 20%;
     justify-content: flex-end;
 }
@@ -164,7 +158,7 @@ nav {
 /* Above */
 
 .above {
-    background-color: #315EE9;
+    background-color: var(--bg-header);
     background-image: url(../img/jumbo.png);
     background-size: cover;
     background-repeat: no-repeat;
@@ -176,19 +170,35 @@ nav {
     text-align: center;
 }
 
-.group-button :first-child {
-    margin-right: 20px;
+.container-fullwidth {
+    width: 1000px;
+    margin: 0 auto;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+    padding: 120px 24px;
 }
-
-
-
-
 
 /* 
 ---------------
 Main
 ---------------
 */
+
+.container {
+    width: 1000px;
+    margin: 0 auto;
+    padding: 120px 24px;
+}
+
+.container--collumn {
+    display: flex;
+}
+
+section {
+    padding: 34px 0px;
+}
 
 main section:nth-child(2n + 2) {
     background-color: #F6F6F6;
@@ -244,7 +254,6 @@ Footer
     display: flex;
     gap: 20px;
 }
-
 
 /* Menu Footer */
 
